--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         BOX STUDIOS, ATLANTA, GA.
       </p>
 
-      <!-- span text 'PHARRELLWILLIAMS.COM' -->
+      <p>PHARRELLWILLIAMS.COM</p> <span><img src="columbia-logo.png"></span>
 
       <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
