--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@
         BOX STUDIOS, ATLANTA, GA.
       </p>
 
-      <p>PHARRELLWILLIAMS.COM</p> <span><img src="columbia-logo.png"></span>
+      <p>
 
-      <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        PHARRELLWILLIAMS.COM <span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+            alt="colombia logo"></span>
+        COLUMBIARECORDS.COM
 
-      <!-- span text 'COLUMBIARECORDS.COM' -->
-
+      </p>
+      <p>
+        <a href="https://s3.amazonaws.com/learn-verified/sony-logo.png">
+      </p>
       <br>
 
-      <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+
 
     </div>
   </div>
