validated in w3c still no sony logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       </p>
       <p>
-        <a href="https://s3.amazonaws.com/learn-verified/sony-logo.png">
+        <a href="https://s3.amazonaws.com/learn-verified/sony-logo.png"></a>
       </p>
       <br>
 
