--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         PHARRELLWILLIAMS.COM <span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
             alt="colombia logo"></span>
         COLUMBIARECORDS.COM
-
       </p>
       <p>
-        <a href="https://s3.amazonaws.com/learn-verified/sony-logo.png"></a>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
       </p>
       <br>
 
