--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
       <p>
 
-        PHARRELLWILLIAMS.COM <span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
-            alt="colombia logo"></span>
-        COLUMBIARECORDS.COM
+        <span>PHARRELLWILLIAMS.COM </span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+          alt="colombia logo"></span><span>COLUMBIARECORDS.COM</span>
       </p>
       <p>
         <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
